// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpIdUnique return errors on different path operations same id 1`] = `
Array [
  Object {
    "code": "operation-operationId-unique",
    "message": "Every operation must have a unique \`operationId\`.",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": 28,
        "line": 4,
      },
      "start": Object {
        "character": 23,
        "line": 4,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
  Object {
    "code": "operation-operationId-unique",
    "message": "Every operation must have a unique \`operationId\`.",
    "path": Array [
      "paths",
      "/path2",
      "get",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": 28,
        "line": 9,
      },
      "start": Object {
        "character": 23,
        "line": 9,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
]
`;

exports[`oasOpIdUnique return errors on same path operations same id 1`] = `
Array [
  Object {
    "code": "operation-operationId-unique",
    "message": "Every operation must have a unique \`operationId\`.",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": 28,
        "line": 4,
      },
      "start": Object {
        "character": 23,
        "line": 4,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
  Object {
    "code": "operation-operationId-unique",
    "message": "Every operation must have a unique \`operationId\`.",
    "path": Array [
      "paths",
      "/path1",
      "post",
      "operationId",
    ],
    "range": Object {
      "end": Object {
        "character": 28,
        "line": 7,
      },
      "start": Object {
        "character": 23,
        "line": 7,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
]
`;
